inc/game_structures.h

typedef struct
{
	sObject* body;
	sObject* flw;
	sObject* frw;
	sObject* blw;
	sObject* brw;
	sObject* fls;
	sObject* frs;
	sObject* bls;
	sObject* brs;
	float max_speed;
	float max_torque;
	dJointID joints[8];
	dJointGroupID jointGroup;
	char drive_wheels;
	float spring_damping;
	float spring_force;
	float rpm;
	float acceleration;
	char transmission;
	float power;
	int breaks;
	float gas;
} sVehicle4Wheel;
void sVehicleInit(sScene* scene,sVehicle4Wheel* vehicle,char* prefix);
void sVehicleTurn(sVehicle4Wheel* vehicle,float amount,uint8_t wheels);
void sVehicleSetMaxSpeedKPH(sVehicle4Wheel* vehicle,float spring);
void sVehicleSetTireFriction(sVehicle4Wheel* vehicle,float friction);
sObject* sCharacterInit(sScene *scene,sSkeleton *skeleton, char *name);
sObject* sMobInit(sScene *scene,sSkeleton *skin, char *name, laType bbox);