siberian_ctypes.py


    def removeItem(self, num):
        if isinstance(num, (int, float)):
            _siberian.fListRemoveItem(self, int(num))
        else:
            raise AttributeError("fList.removeItem argument must be numeric")

    def delete(self):
        _siberian.fListDelete(self)

listCallback = CFUNCTYPE(None, POINTER(fList), c_int)

_siberian.fListConstructor.argtypes = (POINTER(fList), c_float, c_float, c_float, c_float, listCallback)
_siberian.fListConstructor.restype = None

_siberian.fListAddItem.argtypes = (POINTER(fList),c_char_p)
_siberian.fListAddItem.restype  = None

_siberian.fListRemoveItem.argtypes = (POINTER(fList),c_int)
_siberian.fListRemoveItem.restype  = None

_siberian.fListDelete.argtypes = (POINTER(fList),)
_siberian.fListDelete.restype  = None
# """

sActionLoad = _siberian.sActionLoad
sActionLoad.argtypes = (POINTER(sScene), c_char_p, c_char_p)

sObjectGetScene = _siberian.sObjectGetScene
_siberian.sObjectGetScene.restype = POINTER(sScene)
_siberian.sObjectGetScene.argtypes = (sObject_p,)

sSceneSetScript = _siberian.sSceneSetScript
sSceneSetScript.restype = None
sSceneSetScript.argtypes = (POINTER(sScene), behaviour)

sSceneGetObject = _siberian.sSceneGetObject
_siberian.sSceneGetObject.restype = sObject_p
_siberian.sSceneGetObject.argtypes = (POINTER(sScene), c_char_p)

_siberian.sSceneGetMaterial.argtypes = POINTER(sScene), c_char_p
_siberian.sSceneGetMaterial.restype = POINTER(sMaterial)

sSceneAddObject = _siberian.sSceneAddObject
_siberian.sSceneAddObject.restype = sObject_p
_siberian.sSceneAddObject.argtypes = (POINTER(sScene), c_char_p)

_siberian.sSceneLoad.argtypes = POINTER(sScene), c_char_p
_siberian.sSceneLoad.restype = None

_siberian.sSceneSetSkyTexture.argtypes = POINTER(sScene), POINTER(sTexture)
_siberian.sSceneSetSkyTexture.restype = None

_siberian.sSceneAddMesh.argtypes = POINTER(sScene), c_char_p
_siberian.sSceneAddMesh.restype = POINTER(sMesh)

_siberian.sSceneRemoveMesh.argtypes = POINTER(sScene), c_char_p
_siberian.sSceneRemoveMesh.restype = None

_siberian.sSceneFree.argtypes = POINTER(sScene),
_siberian.sSceneFree.restype = None

sEngineSetSwapInterval = _siberian.sEngineSetSwapInterval
sEngineSetSwapInterval.argtypes = (uint32_t,)
sEngineSetSwapInterval.restype = None

sEngineSetActiveScene = _siberian.sEngineSetActiveScene
sEngineSetActiveScene.argtypes = POINTER(sScene),
sEngineSetActiveScene.restype = None

_siberian.sEngineGetActiveScene.argtypes = tuple()
_siberian.sEngineGetActiveScene.restype = POINTER(sScene)

def sEngineGetActiveScene() -> sScene:
    return _siberian.sEngineGetActiveScene().contents

sGetFrameTime = _siberian.sGetFrameTime
sGetFrameTime.restype = double

sGetProfilingString = _siberian.sGetProfilingString
sGetProfilingString.restype = c_char_p

sEngineCreateWindow = _siberian.sEngineCreateWindow
sEngineCreateWindow.argtypes = (uint16_t, uint16_t, uint16_t)

sMouseGetKeyState = _siberian.sMouseGetKeyState
sMouseGetKeyState.argtypes = (c_int,)
sMouseGetKeyState.restype = c_int

sMouseShow = _siberian.sMouseShow
sMouseShow.restype = None

sMouseHide = _siberian.sMouseHide
sMouseHide.restype = None

sMouseGetVerticalScroll = _siberian.sMouseGetVerticalScroll
sMouseGetVerticalScroll.restype = c_float

sMouseSetPosition = _siberian.sSetMousePosition
sMouseSetPosition.argtypes = (c_float, c_float)

sGetMouseDelta = _siberian.sGetMouseDelta
sGetMouseDelta.restype = c_float*2

_siberian.sGetMousePosition.restype = None
_siberian.sGetMousePosition.argtypes = (POINTER(laType),)


def sMouseGetPosition():
    vec = Vector(0, 0, 0)
    _siberian.sGetMousePosition(pointer(vec))
    return vec


sKeyboardGetKeyState = _siberian.sKeyboardGetKeyState
sKeyboardGetKeyState.argtypes = (c_int,)
sKeyboardGetKeyState.restype = c_int

# game_functions
#sScreenshot = _siberian.screenshot
_siberian.sCharacterInit.argtypes = (
    POINTER(sScene), sObject_p, c_char_p)
_siberian.sCharacterInit.restype = sObject_p


def sCharacterInit(scene, obj, name):
    return _siberian.sCharacterInit(scene, obj, c_char_p(name.encode() if isinstance(name, str) else name)).contents


_siberian.sMobInit.argtypes = (
    POINTER(sScene), sObject_p, c_char_p, laType)
_siberian.sMobInit.restype = sObject_p


def sMobInit(scene, obj, name, bbox): return _siberian.sMobInit(
    scene, obj, name.encode(), bbox).contents


class sVehicle4Wheel(Structure):
    _fields_ = [("_body", sObject_p),
                ("_flw", sObject_p),
                ("_frw", sObject_p),
                ("_blw", sObject_p),
                ("_brw", sObject_p),
                ("_fls", sObject_p),
                ("_frs", sObject_p),
                ("_bls", sObject_p),
                ("_brs", sObject_p),
                ("_max_speed", c_float),
                ("_max_torque", c_float),
                ("_max_speed", c_void_p*8),
                ("_jointGroup", c_void_p),
                ("_drive_wheels", uint8_t),
                ("_spring_damping", c_float),
                ("_spring_force", c_float),
                ("_rpm", c_float),
                ("_acceleration", c_float),
                ("_transmission", c_char),
                ("_power", c_float),
                ("_breaks", c_int),
                ("_gas", c_float)]

    def control(self):
        _siberian.sVehicleController(self, cast(0, sObject_p))

    def camControl(self, camera):
        _siberian.sVehicleController(self, camera)

    def setController(self):
        body = getattr(self, "_body").contents
        body['controller'] = self
        body.setBehaviour(lambda obj: obj['controller'].control())

    def setCamController(self, camera):
        body = getattr(self, "_body").contents
        body['controller'] = self
        body['camera'] = camera
        body.setBehaviour(
            lambda obj: obj['controller'].camControl(obj['camera']))

    def steer(self, amount, wheels):
        _siberian.sVehicleTurn(self, amount, wheels)

    def setTireFriction(self, friction):
        _siberian.sVehicleSetTireFriction(self, friction)

    @property
    def collider(self):
        return getattr(self, "_body").contents


_siberian.sVehicleInit.argtypes = POINTER(
    sScene), POINTER(sVehicle4Wheel), c_char_p
_siberian.sVehicleInit.restype = None

_siberian.sVehicleController.argtypes = POINTER(
    sVehicle4Wheel), sObject_p
_siberian.sVehicleController.restype = None

_siberian.sVehicleSetTireFriction.argtypes = POINTER(sVehicle4Wheel), c_float
_siberian.sVehicleSetTireFriction.restype = None

_siberian.sVehicleSetMaxSpeedKPH.argtypes = POINTER(sVehicle4Wheel), c_float
_siberian.sVehicleSetMaxSpeedKPH.restype = None

_siberian.sVehicleTurn.argtypes = POINTER(sVehicle4Wheel), c_float, uint8_t
_siberian.sVehicleTurn.restype = None


class sPhysicsJoint(c_void_p):
    def __init__(self):
        c_void_p.__init__(self)
        self.__angle = 0.0
        self.__force = 0.0
        self.__angle2 = 0.0
        self.__force2 = 0.0

    def setRateAndForce(self, rate, force):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        self.__angle, self.__force = rate, force
        _siberian.sPhysicsJointSetAngle1Rate(self, rate, force)

    def setRateAndForce2(self, rate, force):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        self.__angle2, self.__force2 = rate, force
        _siberian.sPhysicsJointSetAngle2Rate(self, rate, force)

    @property
    def axisCount(self):
        return _siberian.sPhysicsJointGetAxisCount(self)

    @property
    def angle(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return _siberian.sPhysicsJointGetAngle1(self)

    @property
    def angle2(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return _siberian.sPhysicsJointGetAngle2(self)

    @property
    def angleRate(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return _siberian.sPhysicsJointGetAngle1Rate(self)

    @angleRate.setter
    def angleRate(self, angle):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        self.__angle = angle
        if not hasattr(self, '__force'):
            self.__force = 0.0
        _siberian.sPhysicsJointSetAngle1Rate(self, self.__angle, self.__force)

    @property
    def angle2Rate(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return _siberian.sPhysicsJointGetAngle2Rate(self)

    @angle2Rate.setter
    def angle2Rate(self, angle):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        self.__angle2 = angle
        if not hasattr(self, '__force2'):
            self.__force2 = 0.0
        _siberian.sPhysicsJointSetAngle2Rate(
            self, self.__angle2, self.__force2)

    @property
    def angleForce(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return self.__force

    @angleForce.setter
    def angleForce(self, force):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        self.__force = force
        if not hasattr(self, '__angle'):
            self.__angle = 0.0
        _siberian.sPhysicsJointSetAngle1Rate(self, self.__angle, self.__force)

    @property
    def angle2Force(self):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        return self.__force2

    @angle2Force.setter
    def angle2Force(self, force):
        if not self:
            raise Exception('sPhysicsJoint: this joint is not initialized')
        if not hasattr(self, '__angle2'):
            self.__angle2 = 0.0
        self.__force2 = force
        _siberian.sPhysicsJointSetAngle2Rate(
            self, self.__angle2, self.__force2)


_siberian.sPhysicsCreateAnchor.argtypes = (
    sObject_p, sObject_p, dReal, dReal, laType, laType, c_bool)
_siberian.sPhysicsCreateAnchor.restype = sPhysicsJoint
sPhysicsCreateAnchor = lambda *args: _siberian.sPhysicsCreateAnchor(0, *args)

_siberian.sPhysicsJointGetAngle1.argtypes = (sPhysicsJoint,)
_siberian.sPhysicsJointGetAngle1.restype = c_double

_siberian.sPhysicsJointGetAngle2.argtypes = (sPhysicsJoint,)
_siberian.sPhysicsJointGetAngle2.restype = c_double

_siberian.sPhysicsJointGetAngle1Rate.argtypes = (sPhysicsJoint,)
_siberian.sPhysicsJointGetAngle1Rate.restype = c_double

_siberian.sPhysicsJointSetAngle1Rate.argtypes = (
    sPhysicsJoint, c_double, c_double)
_siberian.sPhysicsJointSetAngle1Rate.restype = None

_siberian.sPhysicsJointGetAngle2Rate.argtypes = (sPhysicsJoint,)
_siberian.sPhysicsJointGetAngle2Rate.restype = c_double

_siberian.sPhysicsJointSetAngle2Rate.argtypes = (
    sPhysicsJoint, c_double, c_double)
_siberian.sPhysicsJointSetAngle2Rate.restype = None

_siberian.sPhysicsJointGetAxisCount.argtypes = (sPhysicsJoint,)
_siberian.sPhysicsJointGetAxisCount.restype = c_int

_siberian.sBicycleAssemble.argtypes = (
    sObject_p, sObject_p, sObject_p, sObject_p)
_siberian.sBicycleAssemble.restype = None
sBicycleAssemble = _siberian.sBicycleAssemble


def sVehicle(scene, body,
             flw, frw, blw, brw,
             fls, frs, bls, brs, prefix=''):
    veh = sVehicle4Wheel()
    veh._body = pointer(body)
    veh._flw = pointer(flw)  # Переднее левое колесо
    veh._frw = pointer(frw)  # Переднее правое колесо
    veh._blw = pointer(blw)  # Переднее правое колесо
    veh._brw = pointer(brw)  # Заднее правое колесо
    veh._fls = pointer(fls)  # Передняя левая пружина
    veh._frs = pointer(frs)  # Передняя правая пружина
    veh._bls = pointer(bls)  # Задняя левая пружина
    veh._brs = pointer(brs)  # Задняя правая пружина

    _siberian.sVehicleInit(scene, veh, prefix.encode())
    return veh

